--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-user/02-organisms-01-content-types-user.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-user/02-organisms-01-content-types-user.html
@@ -272,13 +272,13 @@
                 <div class="layout-slat layout-slat--small">
                   <div class="layout-slat__media">      
                     <div class="view__author-image">
-                      <img src="../../images-patternlab/cj-35-35.jpg">
+                      <img src="../../images-patternlab/tyrion-35-35.jpg">
                     </div>
                   </div>
                   <div class="layout-slat__content">
-                    <div class="view__title"><a href="#">Webtwo ipsum dolor sit amet, eskobo chumby doostang bebo</a></div>
+                    <div class="view__title"><a href="#">Thunder, thunder, thundercats, Ho!</a></div>
                     <div class="view__meta">
-                      Posted by <strong>C.J. Cregg</strong> | August 31 at 3:42pm
+                      Posted by <strong>Tyrion Lannister</strong> | June 8 at 11:37pm
                     </div>
                   </div>
                 </div>
@@ -287,13 +287,13 @@
                 <div class="layout-slat layout-slat--small">
                   <div class="layout-slat__media">      
                     <div class="view__author-image">
-                      <img src="../../images-patternlab/sherlock-35-35.jpg">
+                      <img src="../../images-patternlab/cameron-35-35.jpg">
                     </div>
                   </div>
                   <div class="layout-slat__content">
-                    <div class="view__title"><a href="#">You Can't Take The Sky From Me</a></div>
+                    <div class="view__title"><a href="#">Rebel Mission to Ord Mantell</a></div>
                     <div class="view__meta">
-                      Posted by <strong>Sherlock Holmes</strong> | January 1 at 6:20am
+                      Posted by <strong>Cameron Howe</strong> | September 4 at 9:04am
                     </div>
                   </div>
                 </div>
@@ -302,13 +302,13 @@
                 <div class="layout-slat layout-slat--small">
                   <div class="layout-slat__media">      
                     <div class="view__author-image">
-                      <img src="../../images-patternlab/josh-35-35.jpg">
+                      <img src="../../images-patternlab/scully-35-35.jpg">
                     </div>
                   </div>
                   <div class="layout-slat__content">
-                    <div class="view__title"><a href="#">Yeah, I like animals better than people sometimes</a></div>
+                    <div class="view__title"><a href="#">Whatever swag accusamus occupy, gentrify butcher tote bag</a></div>
                     <div class="view__meta">
-                      Posted by <strong>Joshua Lyman</strong> | July 22 at 11:12am
+                      Posted by <strong>Dana Scully</strong> | April 13 at 10:14am
                     </div>
                   </div>
                 </div>
