--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-00-homepage/03-templates-00-homepage.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-00-homepage/03-templates-00-homepage.html
@@ -701,27 +701,27 @@
                   <div class="views-row">
           <article class="card card--icons">
             <div class="card__image">
-              <a href="http://hipsteripsum.me/"><img src="http://lorempixel.com/500/300/business/3/" alt="Card 5:3" height="300" width="500">
+              <a href="http://veggieipsum.com"><img src="http://lorempixel.com/500/300/food/3/" alt="Card 5:3" height="300" width="500">
 </a>
             </div>
             <div class="card__content">
-              <h3 class="card__title"><a href="http://hipsteripsum.me/">Whatever swag accusamus occupy, gentrify butcher tote bag</a></h3>
-              <div><p>Fanny pack ullamco et veniam semiotics. Shoreditch PBR reprehenderit cliche, magna Tonx aesthetic. Narwhal photo booth DIY aute post-ironic anim. Vice cliche brunch est before they sold out fap, street art Odd Future fashion axe messenger bag nihil Tonx tattooed. Nihil hashtag incididunt, do eu art party Banksy jean shorts four loko typewriter.</p></div>
+              <h3 class="card__title"><a href="http://veggieipsum.com">Veggies sunt bona vobis, proinde vos postulo</a></h3>
+              <div><p>Mung bean squash sorrel taro coriander collard greens gumbo bitterleaf tomato. Taro water chestnut celtuce turnip yarrow celery endive scallion black-eyed pea onion. Aubergine dulse turnip greens mustard salsify garlic soybean parsley bitterleaf desert raisin courgette.</p></div>
               <div class="card__counts">
                 <div class="view">
-                  <div class="has-icon--evidence" title="Evidence">2</div>
+                  <div class="has-icon--evidence" title="Evidence">56</div>
                 </div>
                 <div class="view">
-                  <div class="has-icon--comment" title="Comments">5</div>
+                  <div class="has-icon--comment" title="Comments">245</div>
                 </div>
                 <div class="view">
-                  <div class="has-icon--funding" title="Funding">104</div>
+                  <div class="has-icon--funding" title="Funding">452</div>
                 </div>
                 <div class="view">
-                  <div class="has-icon--favorite" title="Favorites">3</div>
+                  <div class="has-icon--favorite" title="Favorites">1055</div>
                 </div>
                 <div class="view">
-                  <div class="has-icon--assistance" title="Assistance">305</div>
+                  <div class="has-icon--assistance" title="Assistance">45</div>
                 </div>
               </div>
             </div>
@@ -759,27 +759,27 @@
                   <div class="views-row">
           <article class="card card--icons">
             <div class="card__image">
-              <a href="http://veggieipsum.com"><img src="http://lorempixel.com/500/300/food/3/" alt="Card 5:3" height="300" width="500">
+              <a href="http://slipsum.com/lite/"><img src="http://lorempixel.com/500/300/people/3/" alt="Card 5:3" height="300" width="500">
 </a>
             </div>
             <div class="card__content">
-              <h3 class="card__title"><a href="http://veggieipsum.com">Veggies sunt bona vobis, proinde vos postulo</a></h3>
-              <div><p>Mung bean squash sorrel taro coriander collard greens gumbo bitterleaf tomato. Taro water chestnut celtuce turnip yarrow celery endive scallion black-eyed pea onion. Aubergine dulse turnip greens mustard salsify garlic soybean parsley bitterleaf desert raisin courgette.</p></div>
+              <h3 class="card__title"><a href="http://slipsum.com/lite/">Yeah, I like animals better than people sometimes</a></h3>
+              <div><p>Especially dogs. Dogs are the best. Every time you come home, they act like they haven't seen you in a year. And the good thing about dogs... is they got different dogs for different people. Like pit bulls. The dog of dogs. Pit bull can be the right man's best friend... or the wrong man's worst enemy. You going to give me a dog for a pet, give me a pit bull.</p></div>
               <div class="card__counts">
                 <div class="view">
-                  <div class="has-icon--evidence" title="Evidence">56</div>
+                  <div class="has-icon--evidence" title="Evidence">2</div>
                 </div>
                 <div class="view">
-                  <div class="has-icon--comment" title="Comments">245</div>
+                  <div class="has-icon--comment" title="Comments">2</div>
                 </div>
                 <div class="view">
-                  <div class="has-icon--funding" title="Funding">452</div>
+                  <div class="has-icon--funding" title="Funding">4</div>
                 </div>
                 <div class="view">
-                  <div class="has-icon--favorite" title="Favorites">1055</div>
+                  <div class="has-icon--favorite" title="Favorites">7</div>
                 </div>
                 <div class="view">
-                  <div class="has-icon--assistance" title="Assistance">45</div>
+                  <div class="has-icon--assistance" title="Assistance">4</div>
                 </div>
               </div>
             </div>
@@ -788,27 +788,27 @@
                   <div class="views-row">
           <article class="card card--icons">
             <div class="card__image">
-              <a href="http://baconipsum.com/"><img src="http://lorempixel.com/500/300/city/3/" alt="Card 5:3" height="300" width="500">
+              <a href="http://chrisvalleskey.com/fillerama/"><img src="http://lorempixel.com/500/300/cats/3/" alt="Card 5:3" height="300" width="500">
 </a>
             </div>
             <div class="card__content">
-              <h3 class="card__title"><a href="http://baconipsum.com/">Bacon ipsum dolor sit amet turducken strip steak beef ribs shank</a></h3>
-              <div><p>Boudin sausage jerky pastrami ground round salami biltong. Sausage fatback strip steak doner pork loin, pork belly drumstick ham short loin hamburger shankle. Short ribs sirloin rump tri-tip beef biltong. Meatball pig salami, jowl pork loin fatback short loin drumstick andouille.</p></div>
+              <h3 class="card__title"><a href="http://chrisvalleskey.com/fillerama/">Help, help, I'm being repressed!</a></h3>
+              <div><p>The Knights Who Say Ni demand a sacrifice! …Are you suggesting that coconuts migrate? Knights of Ni, we are but simple travelers who seek the enchanter who lives beyond these woods. You don't frighten us, English pig-dogs! Go and boil your bottoms, sons of a silly person! I blow my nose at you, so-called Ah-thoor Keeng, you and all your silly English K-n-n-n-n-n-n-n-niggits!</p></div>
               <div class="card__counts">
                 <div class="view">
-                  <div class="has-icon--evidence" title="Evidence">52</div>
+                  <div class="has-icon--evidence" title="Evidence">295</div>
                 </div>
                 <div class="view">
-                  <div class="has-icon--comment" title="Comments">0</div>
+                  <div class="has-icon--comment" title="Comments">1034</div>
                 </div>
                 <div class="view">
-                  <div class="has-icon--funding" title="Funding">2</div>
+                  <div class="has-icon--funding" title="Funding">450</div>
                 </div>
                 <div class="view">
-                  <div class="has-icon--favorite" title="Favorites">0</div>
+                  <div class="has-icon--favorite" title="Favorites">230</div>
                 </div>
                 <div class="view">
-                  <div class="has-icon--assistance" title="Assistance">1</div>
+                  <div class="has-icon--assistance" title="Assistance">487</div>
                 </div>
               </div>
             </div>
@@ -827,15 +827,15 @@
                 </div>       
                   <div class="views-row">
           <article class="card card--icons">
-            <div class="card__number">256,000</div>
+            <div class="card__number">3,000,001</div>
             <div class="card__image">
-              <a href="http://hipsteripsum.me/"><img src="http://lorempixel.com/500/300/business/3/" alt="Card 5:3" height="300" width="500">
+              <a href="http://veggieipsum.com"><img src="http://lorempixel.com/500/300/food/3/" alt="Card 5:3" height="300" width="500">
 </a>
             </div>
             <div class="card__content">
-              <h3 class="card__primary-title"><a href="http://hipsteripsum.me/">Whatever swag accusamus occupy, gentrify butcher tote bag</a></h3>
+              <h3 class="card__primary-title"><a href="http://veggieipsum.com">Veggies sunt bona vobis, proinde vos postulo</a></h3>
               <div class="card__list">
-                <div class="card__list-label">Due by:</div> 4/13/2015
+                <div class="card__list-label">Due by:</div> 2/10/2015
               </div> 
               <div class="card__list">
                 <div class="card__list-label">Eligibility:</div> <span class="has-icon-member" title="Member">Member</span> <span class="has-icon-community" title="Organization">Organization</span>
@@ -850,10 +850,10 @@
               </div>
               <div class="card__counts">
                 <div class="view">
-                  <div class="has-icon--comment" title="Comments">5</div>
+                  <div class="has-icon--comment" title="Comments">245</div>
                 </div>
                 <div class="view">
-                  <div class="has-icon--favorite" title="Favorites">3</div>
+                  <div class="has-icon--favorite" title="Favorites">1055</div>
                 </div>
               </div>
             </div>
@@ -907,15 +907,15 @@
                   </div>
                   <div class="views-row">
           <article class="card card--icons">
-            <div class="card__number">3,000,001</div>
+            <div class="card__number">21,400</div>
             <div class="card__image">
-              <a href="http://veggieipsum.com"><img src="http://lorempixel.com/500/300/food/3/" alt="Card 5:3" height="300" width="500">
+              <a href="http://slipsum.com/lite/"><img src="http://lorempixel.com/500/300/people/3/" alt="Card 5:3" height="300" width="500">
 </a>
             </div>
             <div class="card__content">
-              <h3 class="card__primary-title"><a href="http://veggieipsum.com">Veggies sunt bona vobis, proinde vos postulo</a></h3>
+              <h3 class="card__primary-title"><a href="http://slipsum.com/lite/">Yeah, I like animals better than people sometimes</a></h3>
               <div class="card__list">
-                <div class="card__list-label">Due by:</div> 2/10/2015
+                <div class="card__list-label">Due by:</div> 7/22/2015
               </div> 
               <div class="card__list">
                 <div class="card__list-label">Eligibility:</div> <span class="has-icon-member" title="Member">Member</span> <span class="has-icon-community" title="Organization">Organization</span>
@@ -930,10 +930,10 @@
               </div>
               <div class="card__counts">
                 <div class="view">
-                  <div class="has-icon--comment" title="Comments">245</div>
+                  <div class="has-icon--comment" title="Comments">2</div>
                 </div>
                 <div class="view">
-                  <div class="has-icon--favorite" title="Favorites">1055</div>
+                  <div class="has-icon--favorite" title="Favorites">7</div>
                 </div>
               </div>
             </div>
@@ -947,15 +947,15 @@
                   </div>
                   <div class="views-row">
           <article class="card card--icons">
-            <div class="card__number">355</div>
+            <div class="card__number">120,000,000</div>
             <div class="card__image">
-              <a href="http://baconipsum.com/"><img src="http://lorempixel.com/500/300/city/3/" alt="Card 5:3" height="300" width="500">
+              <a href="http://chrisvalleskey.com/fillerama/"><img src="http://lorempixel.com/500/300/cats/3/" alt="Card 5:3" height="300" width="500">
 </a>
             </div>
             <div class="card__content">
-              <h3 class="card__primary-title"><a href="http://baconipsum.com/">Bacon ipsum dolor sit amet turducken strip steak beef ribs shank</a></h3>
+              <h3 class="card__primary-title"><a href="http://chrisvalleskey.com/fillerama/">Help, help, I'm being repressed!</a></h3>
               <div class="card__list">
-                <div class="card__list-label">Due by:</div> 3/22/2015
+                <div class="card__list-label">Due by:</div> 10/25/2015
               </div> 
               <div class="card__list">
                 <div class="card__list-label">Eligibility:</div> <span class="has-icon-member" title="Member">Member</span> <span class="has-icon-community" title="Organization">Organization</span>
@@ -970,10 +970,10 @@
               </div>
               <div class="card__counts">
                 <div class="view">
-                  <div class="has-icon--comment" title="Comments">0</div>
+                  <div class="has-icon--comment" title="Comments">1034</div>
                 </div>
                 <div class="view">
-                  <div class="has-icon--favorite" title="Favorites">0</div>
+                  <div class="has-icon--favorite" title="Favorites">230</div>
                 </div>
               </div>
             </div>
