[#45599] Update styling and add icons for modified megamenu headers

--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-user/02-organisms-01-content-types-user.escaped.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-user/02-organisms-01-content-types-user.escaped.html
@@ -205,7 +205,7 @@
           &lt;/div&gt;
         &lt;/div&gt;
       &lt;/div&gt;
-      
+
         
       &lt;div class=&quot;pane pane--recent-conversations-recent-conversations&quot;&gt;
         &lt;h2 class=&quot;pane__title&quot;&gt;Recent Conversations&lt;/h2&gt;  
@@ -215,13 +215,13 @@
                 &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
                   &lt;div class=&quot;layout-slat__media&quot;&gt;      
                     &lt;div class=&quot;view__author-image&quot;&gt;
-                      &lt;img src=&quot;../../images-patternlab/daenerys-35-35.jpg&quot;&gt;
+                      &lt;img src=&quot;../../images-patternlab/buttercup-35-35.jpg&quot;&gt;
                     &lt;/div&gt;
                   &lt;/div&gt;
                   &lt;div class=&quot;layout-slat__content&quot;&gt;
-                    &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM&lt;/a&gt;&lt;/div&gt;
+                    &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Cottage cheese brie lancashire. Boursin when the cheese comes out.&lt;/a&gt;&lt;/div&gt;
                     &lt;div class=&quot;view__meta&quot;&gt;
-                      Posted by &lt;strong&gt;Daenerys Targaryen&lt;/strong&gt; | May 26 at 6:37pm
+                      Posted by &lt;strong&gt;Princess Buttercup&lt;/strong&gt; | December 28 at 8:34am
                     &lt;/div&gt;
                   &lt;/div&gt;
                 &lt;/div&gt;
@@ -230,13 +230,13 @@
                 &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
                   &lt;div class=&quot;layout-slat__media&quot;&gt;      
                     &lt;div class=&quot;view__author-image&quot;&gt;
-                      &lt;img src=&quot;../../images-patternlab/tyrion-35-35.jpg&quot;&gt;
+                      &lt;img src=&quot;../../images-patternlab/inigo-35-35.jpg&quot;&gt;
                     &lt;/div&gt;
                   &lt;/div&gt;
                   &lt;div class=&quot;layout-slat__content&quot;&gt;
-                    &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Thunder, thunder, thundercats, Ho!&lt;/a&gt;&lt;/div&gt;
+                    &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Danish danish candy canes bonbon cheesecake danish marzipan&lt;/a&gt;&lt;/div&gt;
                     &lt;div class=&quot;view__meta&quot;&gt;
-                      Posted by &lt;strong&gt;Tyrion Lannister&lt;/strong&gt; | June 8 at 11:37pm
+                      Posted by &lt;strong&gt;Inigo Montoya&lt;/strong&gt; | November 19 at 11:55pm
                     &lt;/div&gt;
                   &lt;/div&gt;
                 &lt;/div&gt;
@@ -245,13 +245,13 @@
                 &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
                   &lt;div class=&quot;layout-slat__media&quot;&gt;      
                     &lt;div class=&quot;view__author-image&quot;&gt;
-                      &lt;img src=&quot;../../images-patternlab/scully-35-35.jpg&quot;&gt;
+                      &lt;img src=&quot;../../images-patternlab/cameron-35-35.jpg&quot;&gt;
                     &lt;/div&gt;
                   &lt;/div&gt;
                   &lt;div class=&quot;layout-slat__content&quot;&gt;
-                    &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Whatever swag accusamus occupy, gentrify butcher tote bag&lt;/a&gt;&lt;/div&gt;
+                    &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Rebel Mission to Ord Mantell&lt;/a&gt;&lt;/div&gt;
                     &lt;div class=&quot;view__meta&quot;&gt;
-                      Posted by &lt;strong&gt;Dana Scully&lt;/strong&gt; | April 13 at 10:14am
+                      Posted by &lt;strong&gt;Cameron Howe&lt;/strong&gt; | September 4 at 9:04am
                     &lt;/div&gt;
                   &lt;/div&gt;
                 &lt;/div&gt;
